# prism-examples

./: README.md
examples/jmed-llm/: .gitignore  README.md  analyze_smdis.py  download.py  dvc.yaml  params.yaml  pyproject.toml
examples/jmed-llm/notebook/: smdis.ipynb
examples/jmed-llm/results/: ANALYSIS.md  cold.json  cough.json  diarrhea.json  discover_diarrhea.json  fever.json  hayfever.json  headache.json  influenza.json  runnynose.json
examples/jmed-llm/results/all/: ANALYSIS.md  discover.json
examples/jmed-llm/results/small/: ANALYSIS.md  discover.json
