[project]
name = "jmed-llm-example"
version = "0.1.0"
description = "Data analysis example using jmed-llm dataset with Prism"
authors = [
    {name = "pillyshi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prism-text @ git+https://github.com/pillyshi/prism",
    "protobuf (>=7.34.1,<8.0.0)",
    "fugashi (>=1.5.2,<2.0.0)",
    "unidic-lite (>=1.0.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
